# SAM3DBody-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  body_mesh.tri  fast_sam_3dbody_dump_csv.py  fast_sam_3dbody_frontend-3D.py  fast_sam_3dbody_frontend.py  ros_demo_webcam.py  two_pass.py
.github/workflows/: build.yml
AmMatrix/: CMakeLists.txt  matrix4x4Tools.c  matrix4x4Tools.h
AmMatrix/TestCPUOptimizedInstructionSet/: CMakeLists.txt  main.c
GraphicsEngine/ModelLoader/: model_loader_transform_joints.c  model_loader_transform_joints.h
GraphicsEngine/MotionCaptureLoader/: bvh_loader.h
GraphicsEngine/MotionCaptureLoader/calculate/: bvh_to_tri_pose.c
GraphicsEngine/MotionCaptureLoader/import/: fromBVH.c
GraphicsEngine/System/: glx3.c
multiview/: CMakeLists.txt  aruco_qr.cpp  aruco_qr.h  aruco_qr_probe.cpp  calib.c  calib.h  calib_test.c  extrinsics.cpp  extrinsics.h  extrinsics_test.cpp  sam_3dbody_extrinsics.cpp  sam_3dbody_synctime.cpp  sync_time.cpp  sync_time.h  sync_time_test.cpp
multiview/test_data/: gopro13_5.3k.calib  gopro4_2.7k.calib  sample.calib
render/: fast_sam_3dbody_render.cpp  mhr_pose_driver.h  offline_sam_3dbody_render.cpp  valgrind.suppress
scripts/: batch_video.sh  build.sh  doxygen.sh  offline_video.sh  setup.sh  video.sh  webcam.sh  webcam_p.sh
src/: bvh_writer.cpp  bvh_writer.h  fast_sam_3dbody.cpp  fast_sam_3dbody.h  fast_sam_3dbody_capi.cpp  fast_sam_3dbody_capi.h  main.cpp  offline_passes.cpp  outputFiltering.h  preprocess.hpp  test_lbs.cpp
synchronization/: CMakeLists.txt  Makefile  README.md  libQRSync.c  makeqrcode.sh  sync.html  xQRSync.c
tools/: quantization_benchmark.sh  quantize_backbone.py
